# python-chat-system

./: .env.example  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.json  LICENSE  README.md  SECURITY.md  alembic.ini  analyze_jtl.py  catalog.json  check_jtl.py  docker-compose.yml  list_files.py  list_plugins.py  prices.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  start.py  stock.json  stone_colors.json  stone_db.json  test_jtl.py  tmp_model_verification_table.csv
.githooks/: pre-commit
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml  release-drafter.yml
app/: bootstrap.py  lifespan.py  main.py  startup.py
config/: logging.yaml  model_detection.yaml  permissions.yaml  secret-scan-allowlist.json  secret-scan-change-comments.json  validator-assets.lock.json
docs/: AGENTS.md  BACKLOG.md  ROADMAP.md  changelog.md  todo.md  training-experiment-plan-af.md  training-workbench.md  venedig-pruefprompt.md  zugaenge.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
model-directories/: README.md
plugins/: README.md
scripts/: check_example_secrets.py  consolidate_training_datasets.py  init_database.py  install_git_hooks.ps1  install_git_hooks.sh  lint_business_letter_dataset.py  migrate_database.py  review_secret_scan.py  run_training_experiment_plan.py  scan_models.py  seed_database.py  setup_venv_chat.ps1  start_fullstack.ps1  start_fullstack.sh  start_server.ps1  start_server.sh
(+599 files in other folders)
