[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-chat-system"
version = "0.1.0"
description = "Modular Python chat system with pluggable model backends"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
