[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernschmiede"
version = "0.1.0"
description = "Local AI workbench for chat, model management, datasets and training"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
